--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,8 @@ url = 'https://www.nirsoft.net/utils/controlmymonitor.zip'
 exposed = { ControlMyMonitor = 'ControlMyMonitor.exe' }
 
 [[tool.bootstrapper.win-64.files]]
-url = 'https://mirrors.sdu.edu.cn/github-release/Chuyu-Team_Dism-Multi-language/v10.1.1002.2/Dism++10.1.1002.1B.zip'
+# update = 'https://api.github.com/repos/Chuyu-Team/Dism-Multi-language/releases/latest'
+url = 'https://dl.lancdn.com/landian/soft/dism/Dism++10.1.1002.1B.zip'
 exposed = { 'Dism++' = 'Dism++x64.exe' }
 lnk = true
 
@@ -62,3 +63,8 @@ url = 'https://us2-dl.techpowerup.com/files/NVCleanstall_1.19.0.exe'
 known-hash = '9dd36ef956af927cf41fa441f91b329a7973e13965e4e7d70e6fa9c1df1cade6'
 headers = { User-Agent = 'winget-cli WindowsPackageManager/1.9.25200 DesktopAppInstaller/Microsoft.DesktopAppInstaller v1.24.25200.0' }
 exposed = { NVCleanstall = 'NVCleanstall_1.19.0.exe' }
+
+[[tool.bootstrapper.win-64.files]]
+# update = 'https://api.github.com/repos/microsoft/PowerToys/releases/latest'
+url = 'https://mirror.nju.edu.cn/github-release/microsoft/PowerToys/LatestRelease/PowerToysSetup-0.92.1-x64.exe'
+known-hash = 'b5b263c259a5eb40d76e564dbdd095bf878593924e61761e8eb70b8351622e62'
